# agentops

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
scenarios/: bgp_flap.yaml  cpu_spike.yaml  disk_full.yaml  link_down.yaml  memory_leak.yaml
src/agentops/: __init__.py  cli.py
src/agentops/agents/: __init__.py  base.py  diagnoser.py  monitor.py  remediator.py  verifier.py
src/agentops/api/: __init__.py  routes.py
src/agentops/dashboard/: __init__.py  app.py
src/agentops/inventory/: __init__.py  registry.py
src/agentops/observe/: __init__.py  tracer.py
src/agentops/orchestrator/: __init__.py  engine.py
src/agentops/protocol/: __init__.py  a2a.py  messages.py
src/agentops/safety/: __init__.py  approval.py  kill_switch.py  rollback.py
tests/: test_api.py  test_base_agent.py  test_diagnoser.py  test_integration.py  test_inventory.py  test_monitor.py  test_observe.py  test_orchestrator.py  test_protocol.py  test_remediator.py  test_safety.py  test_verifier.py
